@@ -3,6 +3,8 @@ version 0.9.13
  * default_encoding config option allows user to specify a default encoding other than ASCII (was a bug for some uses, namely cron jobs).
  * Appropriate intermediate directories are created during authentication token storage.
  * Catch previously uncaught exception when webbrowser does not find a default or specified browser.
+ * Deletion of recurring calendar events does not cause AttributeError.
+ * Deletion of recurring calendar events with --yes flag only deletes all events if --date is not specified.
 
 version 0.9.12
  Enhancements
